# Debayer.Obaid

./: .gitignore  README.md  azure-pipelines-1.yml  azure-pipelines.yml
scratchpad/: .env  docker-compose.yml  dockerfile  gRPC_server.py  requirements.txt
scratchpad/proto/lib/filestream/: __init__.py
src/: .dockerignore  .env  Dockerfile  deploy.env  docker-compose.yml
src/Debayer/: .env  CMakeLists.txt  CMakeSettings.json  linking.sh  main.cpp  vcpkg.json
src/Debayer/Blob/: CMakeLists.txt  UUIDNamespaces.txt  azureblob.cpp  azureblob.h  blob.h
src/Debayer/CUVI/: CMakeLists.txt  CuviPipeline.cpp  CuviPipeline.h  DownloadCuvi.ps1  ImageMeta.cpp  ImageMeta.h  README.MD  install.sh
src/Debayer/CUVI/include/: cuvi.h  cuviCore.hpp  cuviDefs.h  cuvial.hpp  cuvic.hpp  cuvico.hpp  cuvicv.hpp  cuvide.hpp  cuvidm.hpp  cuvigt.hpp  cuviif.hpp  cuviio.hpp  cuviis.hpp  cuviit.hpp
src/Debayer/CUVI/lib/: libopencv_highgui.so.3.4
src/Debayer/Logging/: CMakeLists.txt  Logging.cpp  Logging.h
src/Debayer/RawImageProcessor/: CMakeLists.txt  ImageStructs.h  RawImageProcessor.cpp  RawImageProcessor.h
src/Debayer/UUID/: CMakeLists.txt  UUID.cpp  UUID.h
src/Debayer/Uploading/: DXApplication.sln
src/Debayer/Uploading/Application/: ConnectionSettings.vb  DXApplication.vbproj  Main.Designer.vb  Main.resx  Main.vb  Program.vb  packages.config
src/Debayer/cmake/: AutoVcpkg.cmake  VcpkgBoostrap.cmake
src/Debayer/gRPC/: CMakeLists.txt  buffer.h  gRPCServer.h  grpcServer.cpp
src/Debayer/hashAlgorithms/: CMakeLists.txt  hashAlgorithms.cpp  hashAlgorithms.h
src/Debayer/hashAlgorithms/md5/: CMakeLists.txt  md5.cpp
src/Debayer/hashAlgorithms/sha/: CMakeLists.txt  sha.h  sha1.cpp  sha224.cpp  sha256.cpp  sha384.cpp  sha512.cpp
src/Debayer/proto/: CMakeLists.txt  FileStream.grpc.pb.cc  FileStream.grpc.pb.h  FileStream.pb.cc  FileStream.pb.h  FileStream.proto  inference.proto
src/Debayer/psqlDebayer/: CMakeLists.txt  psqlDebayer.cpp  psqlDebayer.h
